[package]
name = "oi_wiki_api"
version = "0.1.0"
authors = ["mgt <mgt@oi-wiki.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
strip_markdown = "0.2"
chrono = { version = "0.4", features = ["serde"]}
lru = "0.7"
